--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-native-echarts",
+  "name": "native-webview-echarts",
   "version": "0.0.1",
   "description": "react-native echarts componment",
-  "main": "src/index.js",
+  "main": "index.js",
   "directories": {
     "example": "example"
   },
